Fix options button alignment

--- a/app/main.css
+++ b/app/main.css
@@ -244,7 +244,7 @@ button {
   background: none;
   position: absolute;
   top: 0;
-  right: 0;
+  right: -5px;
   border: none;
   font-size: 18px;
   cursor: pointer;
